--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,11 @@
 version: 0.0.{build}
 image: Visual Studio 2017
-build_script:
-- ps: .\Build.ps1
+configuration: Release
+platform: Any CPU
+build:
+  publish_nuget: true
+  parallel: true
+  verbosity: minimal
 deploy:
 - provider: NuGet
   api_key:
