--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,10 +2,11 @@ version: 0.0.{build}
 image: Visual Studio 2017
 configuration: Release
 platform: Any CPU
-build:
-  publish_nuget: true
-  parallel: true
-  verbosity: minimal
+build_script:
+- ps: .\Build.ps1
+artifacts:
+- path: .\artifacts\**\*.nupkg
+  name: Nuget
 deploy:
 - provider: NuGet
   api_key:
