--- a/Bara/Bara.csproj
+++ b/Bara/Bara.csproj
@@ -2,6 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard1.4</TargetFramework>
+    <Authors>Rocher</Authors>
+    <AssemblyVersion>0.0.0.1</AssemblyVersion>
+    <FileVersion>0.0.0.1</FileVersion>
+    <NeutralLanguage>zh-CN</NeutralLanguage>
+    <Copyright>Rocher</Copyright>
+    <Description>just for c# orm cross-platform
+improve a little every day.</Description>
+    <Company>Rocher</Company>
+    <Product>Bara</Product>
   </PropertyGroup>
 
   <ItemGroup>
