--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,15 +10,12 @@ build:
   parallel: true
   verbosity: normal
 before_package:
-- cmd: >-
-    dotnet build Bara -c %CONFIGURATION%
-
-    dotnet build Bara.Test -c %CONFIGURATION%
+- cmd: dotnet build Bara -c %CONFIGURATION%
 after_build:
 - cmd: dotnet pack Bara -c %CONFIGURATION%
 test: off
 artifacts:
-- path: .\Release\Bara.*.nupkg
+- path: '*.nupkg'
   name: Nuget
 deploy:
 - provider: NuGet
