--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,10 +15,11 @@ after_build:
 - cmd: dotnet pack Bara -c %CONFIGURATION%
 test: off
 artifacts:
-- path: '*.nupkg'
+- path: Bara\bin\%CONFIGURATION%\*.nupkg
   name: Nuget
 deploy:
 - provider: NuGet
   api_key:
     secure: mrmWrcj0pCn8uj6Qtw9ML5Ac7HV0JddDxvGrBPX4x2boxdx1IvC1/kaMJpmvIOsBZa0cIz4iFuhF/OYzLvC2F4hIIxEr7lB8pW4HXmncUo8=
   skip_symbols: true
+  artifact: /.*\.nupkg/
