--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,7 @@ after_build:
 - cmd: dotnet pack Bara -c %CONFIGURATION%
 test: off
 artifacts:
-- path: '**\*.nupkg'
+- path: 'Bara\bin\Release\Bara.*.nupkg'
   name: Nuget
 deploy:
 - provider: NuGet
