--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,10 @@ image: Visual Studio 2017
 configuration: Release
 platform: Any CPU
 before_build:
-- cmd: appveyor-retry dotnet restore -v Minimal
+- cmd: >-
+    cd Dev
+
+    appveyor-retry dotnet restore -v Minimal
 build:
   publish_nuget: true
   include_nuget_references: true
