Add DataAccess Interface

--- a/Dev/Bara.DataAccess/Bara.DataAccess.csproj
+++ b/Dev/Bara.DataAccess/Bara.DataAccess.csproj
@@ -5,9 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Abstractions\" />
     <Folder Include="Impl\" />
     <Folder Include="Model\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Bara\Bara.csproj" />
   </ItemGroup>
 
 </Project>
