--- a/Dev/Bara.DataAccess/Bara.DataAccess.csproj
+++ b/Dev/Bara.DataAccess/Bara.DataAccess.csproj
@@ -2,11 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard1.4</TargetFramework>
+    <Version>0.9.0</Version>
+    <AssemblyVersion>0.0.9.0</AssemblyVersion>
+    <FileVersion>0.0.9.0</FileVersion>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Folder Include="Model\" />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Bara\Bara.csproj" />
