--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,6 +18,7 @@ before_package:
 after_build:
 - cmd: >-
     dotnet pack Bara -c %CONFIGURATION%
+    dotnet pack Bara.DataAccess -c %CONFIGURATION%
 test: off
 artifacts:
 - path: 'Bara\bin\Release\Bara.*.nupkg'
