--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,7 +6,8 @@ matrix:
   fast_finish: true
 before_build:
 - cmd: >-
-    cd 'Dev\Bara' 
+    cd Dev
+    cd Bara 
     appveyor-retry dotnet restore -v Minimal
 build:
   publish_nuget: true
