--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,10 +2,10 @@ version: 0.0.{build}
 image: Visual Studio 2017
 configuration: Release
 platform: Any CPU
-matrix:
-  fast_finish: true
 before_build:
 - cmd: >-
+    cd Dev
+
     appveyor-retry dotnet restore -v Minimal
 build:
   publish_nuget: true
@@ -13,15 +13,13 @@ build:
   parallel: true
   verbosity: normal
 before_package:
-- cmd: >-
-    dotnet build Bara -c %CONFIGURATION% 
+- cmd: dotnet build Bara -c %CONFIGURATION%
 after_build:
-- cmd: >-
-    dotnet pack Bara -c %CONFIGURATION%
+- cmd: dotnet pack Bara -c %CONFIGURATION%
 test: off
 artifacts:
 - path: 'Bara\bin\Release\Bara.*.nupkg'
-  name: BaraNupkg
+  name: Nuget
 deploy:
 - provider: NuGet
   api_key:
