--- a/Dev/Bara.DataAccess/Bara.DataAccess.csproj
+++ b/Dev/Bara.DataAccess/Bara.DataAccess.csproj
@@ -2,9 +2,19 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard1.4</TargetFramework>
-    <Version>0.9.0</Version>
-    <AssemblyVersion>0.0.9.0</AssemblyVersion>
-    <FileVersion>0.0.9.0</FileVersion>
+    <Version>0.9.2</Version>
+    <AssemblyVersion>0.0.9.2</AssemblyVersion>
+    <FileVersion>0.0.9.2</FileVersion>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Authors>RocherKong</Authors>
+    <Company>i4ta</Company>
+    <Product>Bara</Product>
+    <Description>DataAccess Extension For Orm Bara.</Description>
+    <PackageProjectUrl>https://github.com/RocherKong/Bara</PackageProjectUrl>
+    <PackageIconUrl>https://github.com/RocherKong/Bara</PackageIconUrl>
+    <RepositoryUrl>https://github.com/RocherKong/Bara</RepositoryUrl>
+    <RepositoryType>GIT</RepositoryType>
+    <Copyright>MIT</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
