Add DataAccess Test

--- a/Dev/Bara.Test/Bara.Test.csproj
+++ b/Dev/Bara.Test/Bara.Test.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Bara.DataAccess\Bara.DataAccess.csproj" />
     <ProjectReference Include="..\Bara\Bara.csproj" />
   </ItemGroup>
 
