--- a/Dev/Bara.Sample.Web/Bara.Sample.Web.csproj
+++ b/Dev/Bara.Sample.Web/Bara.Sample.Web.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bara" Version="0.9.2" />
+    <PackageReference Include="Bara.DataAccess" Version="0.9.2" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
   </ItemGroup>
 
@@ -13,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Bara\Bara.csproj" />
+    <None Include="Bara.csproj" />
   </ItemGroup>
 
 </Project>
