--- a/Dev/Bara.Sample.Web/Bara.Sample.Web.csproj
+++ b/Dev/Bara.Sample.Web/Bara.Sample.Web.csproj
@@ -8,7 +8,7 @@
     <PackageReference Include="Bara" Version="0.9.2" />
     <PackageReference Include="Bara.DataAccess" Version="0.9.2" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
-    <PackageReference Include="NLog" Version="5.0.0-beta11" />
+    <PackageReference Include="NLog.Extensions.Logging" Version="1.0.0-rtm-beta7" />
   </ItemGroup>
 
   <ItemGroup>
@@ -21,6 +21,18 @@
 
   <ItemGroup>
     <Folder Include="Maps\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="NLog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="BaraMapConfig.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
