--- a/Dev/Bara/Bara.csproj
+++ b/Dev/Bara/Bara.csproj
@@ -2,8 +2,8 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard1.4;netstandard2.0;net46</TargetFrameworks>
     <Authors>Rocher</Authors>
-    <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>1.0.0.0</FileVersion>
+    <AssemblyVersion>1.1.0.0</AssemblyVersion>
+    <FileVersion>1.1.0.0</FileVersion>
     <NeutralLanguage>zh-CN</NeutralLanguage>
     <Copyright>Rocher</Copyright>
     <Description>just for c# orm cross-platform
@@ -12,8 +12,8 @@ improve a little every day.</Description>
     <Product>Bara</Product>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>False</PackageRequireLicenseAcceptance>
-    <Version>1.0.0</Version>
-    <PackageReleaseNotes>Release</PackageReleaseNotes>
+    <Version>1.1.0</Version>
+    <PackageReleaseNotes>update Tag IsNeedShow Params and Use DapperDynamicParams</PackageReleaseNotes>
   </PropertyGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'net46' ">
     <PackageReference Include="Dapper" Version="1.50.2" />
